@@ -412,6 +412,7 @@ Version 5.0.0 - 2018-10-01
 * Rename "install-dependences" into "activate-dependencies"
 * Use recursive common table expression for child_of/parent_of operators
 * Add sql_cast on Field
+* BUG#9502 Don't auto_uninstall modules
 
 Version 4.8.0 - 2018-04-23
 --------------------------
